# prompt-optimizer-for-extracting-data-from-pdfs

./: .gitignore  README.md  REPORT.md
prompt_optimizer/: README.md  REPORT.md  pyproject.toml  test_quota.py  test_rotation.py
prompt_optimizer/config/: alternate_schema.yaml  default.yaml  hiring_resume.yaml
prompt_optimizer/src/: __init__.py  config_loader.py  main.py
prompt_optimizer/src/data/: __init__.py  loader.py  schema.py
prompt_optimizer/src/llm/: __init__.py  client.py  logger.py
prompt_optimizer/src/observability/: __init__.py  diff.py  report.py
prompt_optimizer/src/optimizer/: __init__.py  budget.py  loop.py  mutator.py  state.py
prompt_optimizer/src/scoring/: __init__.py  alignment.py  cache.py  metrics.py  scorer.py
prompt_optimizer/tests/: __init__.py  test_alignment.py  test_scoring.py
