[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-optimizer"
version = "0.1.0"
description = "Automated prompt optimization for structured JSON extraction from PDFs"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "google-generativeai>=0.8.0",
    "groq>=0.11.0",
    "scipy>=1.11.0",
    "PyMuPDF>=1.24.0",
    "tenacity>=8.2.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
prompt-optimizer = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
